// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoScaleSection /> renders correctly for multiAz 1`] = `
<Fragment>
  <GridItem
    id="autoscaling"
  >
    <FormGroup
      fieldId="autoscaling"
      label="Autoscaling"
      labelIcon={
        <PopoverHint
          hint={
            <React.Fragment>
              Autoscaling automatically adds and removes nodes from the cluster based on resource requirements.
               
              <ExternalLink
                href="https://docs.openshift.com/container-platform/4.13/machine_management/applying-autoscaling.html"
              >
                Learn more about autoscaling
                
              </ExternalLink>
            </React.Fragment>
          }
        />
      }
    />
    <Field
      component={[Function]}
      label="Enable autoscaling"
      name="autoscalingEnabled"
      onChange={[Function]}
    />
    <Split
      className="autoscaling__container"
      hasGutter={true}
    >
      <SplitItem>
        <FormGroup
          className="autoscaling__nodes-formGroup"
          fieldId="nodes_min"
          helperText={
            <HelperText>
              <HelperTextItem>
                x 3 zones = 0
              </HelperTextItem>
            </HelperText>
          }
          isRequired={true}
          label="Minimum nodes per zone"
        >
          <Field
            ariaLabel="Minimum nodes"
            component={[Function]}
            displayError={[Function]}
            hideError={[Function]}
            limit="min"
            max={60}
            min={0}
            name="min_replicas"
            type="text"
            validate={
              Array [
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </FormGroup>
      </SplitItem>
      <SplitItem>
        <FormGroup
          className="autoscaling__nodes-formGroup"
          fieldId="nodes_max"
          helperText={
            <HelperText>
              <HelperTextItem>
                x 3 zones = 0
              </HelperTextItem>
            </HelperText>
          }
          isRequired={true}
          label="Maximum nodes per zone"
          labelIcon={
            <PopoverHint
              hint={
                <React.Fragment>
                  The number of compute nodes to provision per zone. The minimum number of compute nodes will vary depending on which features are enabled.
                  <br />
                </React.Fragment>
              }
            />
          }
        >
          <Field
            ariaLabel="Maximum nodes"
            component={[Function]}
            displayError={[Function]}
            hideError={[Function]}
            limit="max"
            max={60}
            min={0}
            name="max_replicas"
            type="text"
            validate={
              Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </FormGroup>
      </SplitItem>
    </Split>
  </GridItem>
</Fragment>
`;

exports[`<AutoScaleSection /> renders correctly when autoscale disabled 1`] = `
<Fragment>
  <GridItem
    id="autoscaling"
  >
    <FormGroup
      fieldId="autoscaling"
      label="Autoscaling"
      labelIcon={
        <PopoverHint
          hint={
            <React.Fragment>
              Autoscaling automatically adds and removes nodes from the cluster based on resource requirements.
               
              <ExternalLink
                href="https://docs.openshift.com/container-platform/4.13/machine_management/applying-autoscaling.html"
              >
                Learn more about autoscaling
                
              </ExternalLink>
            </React.Fragment>
          }
        />
      }
    />
    <Field
      component={[Function]}
      label="Enable autoscaling"
      name="autoscalingEnabled"
      onChange={[Function]}
    />
  </GridItem>
</Fragment>
`;

exports[`<AutoScaleSection /> renders correctly when autoscale enabled 1`] = `
<Fragment>
  <GridItem
    id="autoscaling"
  >
    <FormGroup
      fieldId="autoscaling"
      label="Autoscaling"
      labelIcon={
        <PopoverHint
          hint={
            <React.Fragment>
              Autoscaling automatically adds and removes nodes from the cluster based on resource requirements.
               
              <ExternalLink
                href="https://docs.openshift.com/container-platform/4.13/machine_management/applying-autoscaling.html"
              >
                Learn more about autoscaling
                
              </ExternalLink>
            </React.Fragment>
          }
        />
      }
    />
    <Field
      component={[Function]}
      label="Enable autoscaling"
      name="autoscalingEnabled"
      onChange={[Function]}
    />
    <Split
      className="autoscaling__container"
      hasGutter={true}
    >
      <SplitItem>
        <FormGroup
          className="autoscaling__nodes-formGroup"
          fieldId="nodes_min"
          helperText={<HelperText />}
          isRequired={true}
          label="Minimum node count"
        >
          <Field
            ariaLabel="Minimum nodes"
            component={[Function]}
            displayError={[Function]}
            hideError={[Function]}
            limit="min"
            max={180}
            min={0}
            name="min_replicas"
            type="text"
            validate={
              Array [
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </FormGroup>
      </SplitItem>
      <SplitItem>
        <FormGroup
          className="autoscaling__nodes-formGroup"
          fieldId="nodes_max"
          helperText={<HelperText />}
          isRequired={true}
          label="Maximum node count"
          labelIcon={
            <PopoverHint
              hint={
                <React.Fragment>
                  The number of compute nodes to provision per zone. The minimum number of compute nodes will vary depending on which features are enabled.
                  <br />
                </React.Fragment>
              }
            />
          }
        >
          <Field
            ariaLabel="Maximum nodes"
            component={[Function]}
            displayError={[Function]}
            hideError={[Function]}
            limit="max"
            max={180}
            min={0}
            name="max_replicas"
            type="text"
            validate={
              Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </FormGroup>
      </SplitItem>
    </Split>
  </GridItem>
</Fragment>
`;
